// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the popup when the button is clicked 1`] = `
<li
  className="issue-meta dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={true}
    overlay={
      <CommentPopup
        onComment={[Function]}
        placeholder={undefined}
        toggleComment={
          [MockFunction] {
            "calls": Array [
              Array [],
            ],
          }
        }
      />
    }
  >
    <Button
      className="button-link issue-action js-issue-comment"
      onClick={[Function]}
    >
      <span
        className="issue-meta-label"
      >
        issue.comment.formlink
      </span>
    </Button>
  </Toggler>
</li>
`;

exports[`should render correctly 1`] = `
<li
  className="issue-meta dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={false}
    overlay={
      <CommentPopup
        onComment={[Function]}
        placeholder={undefined}
        toggleComment={[MockFunction]}
      />
    }
  >
    <Button
      className="button-link issue-action js-issue-comment"
      onClick={[Function]}
    >
      <span
        className="issue-meta-label"
      >
        issue.comment.formlink
      </span>
    </Button>
  </Toggler>
</li>
`;
